Added new section lines for visual legibility

--- a/buttons/css/styles.css
+++ b/buttons/css/styles.css
@@ -1,5 +1,10 @@
-/* 1.png */
+
+/*----------------------------------------------------------------------*/
+/*1.png*/
+
 .button {
 	background-color: #61cfe9;
 	box-shadow: 0 10px 40px 0 rgba(0,0,0,.20);
 }
+
+/*----------------------------------------------------------------------*/
