--- a/gradients/css/gradients.css
+++ b/gradients/css/gradients.css
@@ -1,8 +1,8 @@
 
 /*----------------------------------------------------------------------*/
-/*1.png*/
+/*gradient-1.png*/
 
-.gradient {
+.gradient-1 {
 	background-image: linear-gradient(45deg, #a322eb 0%, #00b6ff 100%);
 }
 
