Update solo button sample with button- name prefix

--- a/buttons/css/buttons.css
+++ b/buttons/css/buttons.css
@@ -1,8 +1,8 @@
 
 /*----------------------------------------------------------------------*/
-/*1.png*/
+/*button-1.png*/
 
-.button {
+.button-1 {
 	background-color: #61cfe9;
 	box-shadow: 0 10px 40px 0 rgba(0,0,0,.20);
 }
