--- a/modals/css/modals.css
+++ b/modals/css/modals.css
@@ -1,8 +1,8 @@
 
 /*----------------------------------------------------------------------*/
-/*1.png*/
+/*modal-1.png*/
 
-.modal {
+.modal-1 {
 	border-radius: 10px;
 	background: #f9f8f9;
 	box-shadow: 0 8px 8px 0 rgba(0,0,0,.12), 0 13px 80px 0 rgba(0,0,0,.24);
