--- a/modals/css/modals.css
+++ b/modals/css/modals.css
@@ -9,4 +9,10 @@
 }
 
 /*----------------------------------------------------------------------*/
+/*modal-2.png*/
 
+.modal-2 {
+	border-radius: 4px;
+	background: #f8f8f8;
+	box-shadow: 0 20px 45px 0 rgba(5,6,8,.80);
+}
