--- a/gradients/css/gradients.css
+++ b/gradients/css/gradients.css
@@ -6,3 +6,9 @@
 }
 
 /*----------------------------------------------------------------------*/
+
+.gradient-2 {
+	background-image: linear-gradient(-135deg, #a7e888 0%, #7fbfff 100%);
+}
+
+/*----------------------------------------------------------------------*/
