--- a/gradients/css/gradients.css
+++ b/gradients/css/gradients.css
@@ -12,3 +12,9 @@
 }
 
 /*----------------------------------------------------------------------*/
+
+.gradient-3 {
+	background-image: linear-gradient(-135deg, #b6b8ff 0%, #ffb3d1 100%);
+}
+
+/*----------------------------------------------------------------------*/
