Add style for the body of modal-2
For ease of entry, stick to naming the actual modal class the same as the image asset. If you want to specify the color of the body background, enter it via body.modal-*

--- a/modals/css/modals.css
+++ b/modals/css/modals.css
@@ -9,6 +9,10 @@
 
 /*----------------------------------------------------------------------*/
 
+body.modal-2 {
+	background: #e4e7f6;
+}
+
 .modal-2 {
 	border-radius: 4px;
 	background: #f8f8f8;
@@ -16,4 +20,3 @@
 }
 
 /*----------------------------------------------------------------------*/
-
