Run CSScomb on modals.css

--- a/modals/css/modals.css
+++ b/modals/css/modals.css
@@ -29,7 +29,7 @@ body.modal-2 {
 }
 
 body.modal-3 {
-	background: #2C353C;
+	background: #2c353c;
 }
 
 /*----------------------------------------------------------------------*/
