--- a/buttons/css/buttons.css
+++ b/buttons/css/buttons.css
@@ -7,3 +7,18 @@
 }
 
 /*----------------------------------------------------------------------*/
+
+.button-2 {
+	font-family: 'Myriad Pro';
+	font-size: 30px;
+	font-weight: light;
+
+	letter-spacing: 3px;
+
+	color: #fff;
+	border-radius: 5px;
+	background: #0e9cff;
+	box-shadow: 0 15px 30px 0 rgba(14,156,255,.60);
+}
+
+/*----------------------------------------------------------------------*/
