--- a/buttons/css/buttons.css
+++ b/buttons/css/buttons.css
@@ -2,8 +2,12 @@
 /*----------------------------------------------------------------------*/
 
 .button-1 {
-	background-color: #61cfe9;
+	background: #61cfe9;
 	box-shadow: 0 10px 40px 0 rgba(0,0,0,.20);
+	color: #fff;
+	width: 120px;
+	height: 120px;
+	border-radius: 60px;
 }
 
 /*----------------------------------------------------------------------*/
