--- a/gradients/css/gradients.css
+++ b/gradients/css/gradients.css
@@ -18,3 +18,9 @@
 }
 
 /*----------------------------------------------------------------------*/
+
+.gradient-4 {
+	background-image: linear-gradient(-135deg, #FFB33B 0%, #FF5221 100%);
+}
+
+/*----------------------------------------------------------------------*/
