--- a/gradients/css/gradients.css
+++ b/gradients/css/gradients.css
@@ -24,3 +24,9 @@
 }
 
 /*----------------------------------------------------------------------*/
+
+.gradient-5 {
+	background-image: linear-gradient(-135deg, #A1EB3A 0%, #53A319 100%);
+}
+
+/*----------------------------------------------------------------------*/
