--- a/gradients/css/gradients.css
+++ b/gradients/css/gradients.css
@@ -30,3 +30,9 @@
 }
 
 /*----------------------------------------------------------------------*/
+
+.gradient-6 {
+	background-image: linear-gradient(-135deg, #787878 0%, #343434 100%);
+}
+
+/*----------------------------------------------------------------------*/
